# tedec

./: .gitignore  fractional_brownian_motion.py  nice_plotting.py  pyproject.toml  readme.md  stairs_with_error.py  therm_nontherm_decomp.py
examples/: rhessi.ipynb  rhessi_download.pro  stix.ipynb
simulations/: .gitignore  basic.ipynb  parameter_variation_across_time.ipynb  readme.md  simulation_support.py  warm_target.py
simulations/more_complex/: parameter_variation_across_time.ipynb  simulation_support.py
simulations/simpler/: annotating.py  cold-flare.ipynb  sim_config.py  strong-thermal.ipynb  style.mplstyle  summarize_simple_simulations.py  typical-flare.ipynb  weak-nonthermal.ipynb
tedec/: decomp.py  fractional_brownian_motion.py  nice_plotting.py
