[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tedec"]

[project]
version = "0.1"
name = "tedec"
dependencies = [
    "astropy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
simulations = [
    "jupyter",
    "ipynb",
    "pyqt6",
    "yaff @ https://github.com/settwi/yaff/archive/refs/tags/v0.2.tar.gz",
]
